package com.example.chatapp.utils

object Constant {

    const val EMAIL_TEXT_FIELD = "email_text_field"
    const val PASSWORD_TEXT_FIELD = "password_text_field"
    const val CONFIRM_PASSWORD_TEXT_FIELD = "confirm_password_text_field"
    const val SIGNUP_BUTTON = "signup_button"

    const val PROFILE_NAME_FIELD = "profile_name_field"
    const val PROFILE_IMAGE_BOX = "profile_image_box"
    const val PROFILE_CONTINUE_BUTTON = "profile_continue_button"

    const val HOME_CHAT_LIST = "home_chat_list"
    const val HOME_LOGOUT_BUTTON = "home_logout_button"
    const val HOME_EMPTY_STATE = "home_empty_state"

    const val CHAT_MESSAGE_LIST = "chat_message_list"
    const val CHAT_MESSAGE_INPUT = "chat_message_input"
    const val CHAT_SEND_BUTTON = "chat_send_button"
    const val CHAT_BACK_BUTTON = "chat_back_button"
    const val CHAT_SELECT_IMAGE_BUTTON = "chat_select_image_button"
    const val CHAT_TAKE_PHOTO_BUTTON = "chat_take_photo_button"
}