...
        if (password.isBlank()) {
            showError("Please enter your password.")
            return
        }

        if (password != confirmPassword) {
            showError("Passwords do not match.")
            return
        }

        viewModelScope.launch {

            _uiEvent.send(CommonUiEvent.ShowLoader)
...
