...
        TextButton(
            onClick = { authViewModel.onEvent(AuthEvent.LoginClicked) },
            enabled = !showLoader.value
        ) {

            Text(
                "Already have an account? Login"
            )
        }

        uiState.errorMessage?.let { error ->

            Text(
...
